k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vitalsync-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: vitalsync.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vitalsync-backend
                port:
                  number: 3000
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vitalsync-frontend
                port:
                  number: 80
